--- a/package.json
+++ b/package.json
@@ -3,11 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "autoprefixer": "^10.4.5",
     "bootstrap": "^5.1.3",
     "cra-template": "1.2.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "react-scripts": "5.0.1"
+    "react-icons": "^4.3.1",
+    "react-scripts": "5.0.1",
+    "styled-components": "^5.3.5",
+    "styled-icons": "^10.45.0"
   },
   "scripts": {
     "start": "react-scripts start",
