--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "autoprefixer": "^10.4.5",
-    "bootstrap": "^5.1.3",
+    "autoprefixer": "10.4.5",
+    "bootstrap": "^5.2.0-beta1",
     "cra-template": "1.2.0",
     "react": "^18.1.0",
+    "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.3.1",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.5",
     "styled-icons": "^10.45.0"
@@ -39,5 +41,8 @@
   },
   "devDependencies": {
     "web-vitals": "^2.1.4"
+  },
+  "overrides": {
+    "autoprefixer": "10.4.5"
   }
 }
