--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/material": "^5.8.3",
     "autoprefixer": "10.4.5",
+    "axios": "^1.1.3",
     "bootstrap": "^5.2.0-beta1",
     "cra-template": "1.2.0",
     "react": "^18.1.0",
