--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "autoprefixer": "10.4.5",
     "axios": "^1.1.3",
     "bootstrap": "^5.2.0-beta1",
+    "cloudinary-react": "^1.8.1",
     "cra-template": "1.2.0",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.3.1",
+    "react-loading-icons": "^1.1.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.5",
